[tool.poetry]
name = "pycall"
version = "0.1.0"
description = "simple module to call subprocesses and log the output"
authors = ["MadMcCrow <do-not-mail.me@please.com>"]
packages = [{include = "pycall"}]
# relative path does not work. readme is in parent folder
# readme = "../../docs/README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.richtext.dependencies]
rich = "*"

[build-system]
requires = ["poetry-core>=1.9.1,<3.0"]
build-backend = "poetry.core.masonry.api"